# File-Translator-Mobile

./: .gitignore  baidu_Translator_v4_0.py  baidu_translator_v212.py  kimi_translator_v214.py  pyproject.toml  requirements.md  requirements.txt  revision.md  streamlit_app.py
.github/workflows/: bump_version.yml
